# AWS-demo-project

./: .gitignore  .tflint.hcl  README-IAC.md  README.md  pytest-coverage.txt  pytest.xml
.github/: CODEOWNERS  tflint-problem-matcher.json
.github/workflows/: private-package-main-orchestration.yml  private-package-main-workflow.yml  private-package-main.yml  private-package-pr-orchestration.yml  private-package-pr-workflow.yml  private-package-pr.yml  terraform-pipeline-main.yml  terraform-pipeline-pr.yml  terraform-pipeline.yml  terraform-pr-checks.yml  tfsec.yml
docs/drawio_diagrams/: .$02_terraform_openid_connect_integration.drawio.bkp  .$general_idea.drawio.dtmp  02_terraform_openid_connect_integration.drawio  general_idea.drawio
python-code/: write_to_timestream.py
python_packages/: pyproject.toml  setup.py
python_packages/data-testing/: LICENSE  README.md  setup.py
python_packages/data-testing/src/: examply.py
python_packages/data-testing/tests/: test_examply.py
python_packages/data-validation-helpers/: README.md  setup.py
python_packages/data-validation-helpers/src/: __init__.py  examply.py
python_packages/data-validation-helpers/tests/: test_example.py  test_examply.py
terraform/: .tflint.hcl  01_codeartifact copy.tf  01_codeartifact.tf  README.md  bootstrap.tf  main.tf  providers.tf  real_time_application.tf  terraform.tfvars  test.tf  tst.tf  tstingstuff.tf  variables.tf
