[project]
name = "data_validation_helpers"
version = "0.0.1"
authors = [
  { name="Pascal Lagerweij", email="plagerweij@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pglagerweij/AWS-demo-project"
"Bug Tracker" = "https://github.com/pglagerweij/AWS-demo-project/issues"